hphp/hack/test/typecheck/inout/bad_inout_decl_special_destruct.php.exp
File "bad_inout_decl_special_destruct.php", line 4, characters 19-28:
Destructor must not have any parameters. (Parsing[1002])
