hphp/hack/test/typecheck/inout/bad_inout_decl_special_destruct.php
<?hh

class C {
  public function __destruct(inout $_) {
    echo 'Destructing '.__CLASS__."\n";
  }
}
